Fix responsive layout issues

--- a/src/Styles/Cart.css
+++ b/src/Styles/Cart.css
@@ -372,7 +372,7 @@ section.checkout button.btc i {
     }
 
     section.checkout button {
-        width: 220px;
+        width: 231px;
         height: 55px;
     }
 }
