--- a/src/Styles/MainSite.css
+++ b/src/Styles/MainSite.css
@@ -340,12 +340,30 @@ div.terms h1.termsTitle {
         padding: 8px 50px;
     }
 
+
     .search .fa-search {
         font-size: 22px;
-        margin-right: -20px;
+        margin: 0;
+        padding: 0;
         left: -125px;
-        /* vertical-align: 50px; */
+    }
 
+    @-moz-document url-prefix() {
+        .search .fa-search {
+            font-size: 22px;
+            margin: 0;
+            padding: 0;
+            left: -112px;
+        }
+    }
+
+    @supports (-ms-ime-align:auto) {
+        .search .fa-search {
+            font-size: 22px;
+            margin: 0;
+            padding: 0;
+            left: -115px;
+        }
     }
 }
 
